chore(dev): add session helpers, WIP commit and local-history scripts; VSCode tasks

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ webapp/npm-debug.log*
 webapp/pnpm-debug.log*
 webapp/yarn-error.log
 webapp/package-lock.json
+
+# Local session/chat history (ignored)
+.local/
+.tradewatch_session.json
