Improve frontend container workflow

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -34,7 +34,7 @@ services:
     environment:
       NEXT_PUBLIC_API_BASE: https://$DOMAIN
     volumes:
-      - web_out:/out
+      - web_out:/app/out
   nginx:
     image: nginx:alpine
     ports: ["80:80", "443:443"]
