--- a/deploy/docker-compose.dev.yml
+++ b/deploy/docker-compose.dev.yml
@@ -24,7 +24,7 @@ services:
     depends_on: [ db, redis ]
     ports: [ "8001:8001" ]
     volumes:
-      - ../server:/app:delegated
+      - ../server:/app/server:delegated
 
   worker:
     build:
@@ -36,7 +36,7 @@ services:
       REDIS_URL: redis://redis:6379/0
     depends_on: [ db, redis ]
     volumes:
-      - ../server:/app:delegated
+      - ../server:/app/server:delegated
 
   web:
     build:
